force-app/main/default/objects/Warranty_Prior__c/Warranty_Prior__c.object-meta.xml
<CustomObject>
    <label>Warranty Prior</label>
    <nameField>
        <displayFormat>WP-{0000}</displayFormat>
        <label>Warranty Prior No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Priors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>