force-app/main/default/objects/Warranty_Prior__c/fields/ASM_Feedback__c.field-meta.xml
<CustomField>
    <fullName>ASM_Feedback__c</fullName>
    <label>ASM Feedback</label>
    <type>TextArea</type>
</CustomField>