force-app/main/default/objects/Warranty_Prior__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <label>Batch Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>