force-app/main/default/objects/Warranty_Prior__c/fields/Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code__c</fullName>
    <label>Dealer Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>