force-app/main/default/objects/Warranty_Prior__c/fields/Dealer_Observation__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Observation__c</fullName>
    <label>Dealer Observation</label>
    <type>TextArea</type>
</CustomField>