force-app/main/default/objects/Warranty_Prior__c/fields/Dealers_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealers_Code__c</fullName>
    <formula>Job_Card__r.Dealer_Contact__r.Account.Center_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealers Code</label>
    <type>Text</type>
</CustomField>