force-app/main/default/objects/Warranty_Prior__c/fields/Dealers_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealers_Name__c</fullName>
    <formula>Job_Card__r.Dealer_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealers Name</label>
    <type>Text</type>
</CustomField>