force-app/main/default/objects/Warranty_Prior__c/fields/FFIR_Link__c.field-meta.xml
<CustomField>
    <fullName>FFIR_Link__c</fullName>
    <label>FFIR Link</label>
    <type>Url</type>
</CustomField>