force-app/main/default/objects/Warranty_Prior__c/fields/FFIR_Number__c.field-meta.xml
<CustomField>
    <fullName>FFIR_Number__c</fullName>
    <label>FFIR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>