force-app/main/default/objects/Warranty_Prior__c/fields/Manager_email__c.field-meta.xml
<CustomField>
    <fullName>Manager_email__c</fullName>
    <label>Manager email</label>
    <type>Email</type>
</CustomField>