force-app/main/default/objects/Warranty_Prior__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Media</label>
    <type>TextArea</type>
</CustomField>