force-app/main/default/objects/Warranty_Prior__c/fields/Motor_Number__c.field-meta.xml
<CustomField>
    <fullName>Motor_Number__c</fullName>
    <label>Motor Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>