force-app/main/default/objects/Warranty_Prior__c/fields/Service_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Center_Name__c</fullName>
    <formula>Job_Card__r.Service_Center__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Center Name</label>
    <type>Text</type>
</CustomField>