force-app/main/default/objects/Warranty_Prior__c/fields/Standard_Values__c.field-meta.xml
<CustomField>
    <fullName>Standard_Values__c</fullName>
    <label>Standard Values</label>
    <type>TextArea</type>
</CustomField>