force-app/main/default/objects/Warranty_Prior__c/fields/Total_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Claim_Amount__c</fullName>
    <label>Total Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>