force-app/main/default/objects/Warranty_Prior__c/fields/Type_of_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Warranty__c</fullName>
    <label>Type of Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturer&apos;s</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>