force-app/main/default/objects/Warranty_Prior__c/fields/Warranty_Prior_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Prior_Date__c</fullName>
    <label>Warranty Prior Date</label>
    <type>Date</type>
</CustomField>