force-app/main/default/objects/Warranty_Prior__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ASM_Feedback__c</columns>
    <columns>Dealer_Name__c</columns>
    <columns>Job_Card__c</columns>
    <columns>VIN__c</columns>
    <columns>Total_Claim_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </filters>
    <label>All</label>
</ListView>