force-app/main/default/objects/Warranty_Prior__c/listViews/ASM.listView-meta.xml
<ListView>
    <fullName>ASM</fullName>
    <columns>NAME</columns>
    <columns>Type_of_Warranty__c</columns>
    <columns>Job_Card__c</columns>
    <columns>Warranty_Prior_Date__c</columns>
    <columns>Total_Claim_Amount__c</columns>
    <columns>Registration_Number__c</columns>
    <columns>Dealer_Name__c</columns>
    <columns>Dealer_Code__c</columns>
    <columns>ASM_Feedback__c</columns>
    <columns>Batch_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>ASM</label>
    <sharedTo>
        <group>ASM_Group</group>
    </sharedTo>
</ListView>